# 2d-game-engine

./: CMakeLists.txt  TOTO_AND_NOTES
src/Characters/: Character.cpp  Character.h
src/UI/: UIElement.cpp  UIElement.h
src/UI/inventory/: InventorySideBar.cpp  InventorySideBar.h
src/UI/main/: SkillBar.cpp  (+1 more)
src/actions/: ActionTypes.h
src/animations/: Animation.cpp  Animation.h  AnimationDispatcher.cpp  AnimationDispatcher.h  AnimationGroups.h  AnimationManager.cpp  AnimationManager.h  AnimationTypes.h
src/common/: MortalEntity.h
src/core/: ActionDispatcher.cpp  ActionDispatcher.h  Actions.cpp  Actions.h  Engine.cpp  Engine.h  Game.cpp  Game.h  GameComponent.h  RenderDispatcher.h  UpdateDispatcher.h  eventTypes.h
src/data/: DataProvider.cpp  DataProvider.h
src/effects/: Effect.cpp  Effect.h  EffectManager.cpp  EffectManager.h
src/enums/: CastingTypes.h  EventType.h  ProjectilePhase.h  ProjectilePhases.h  SkillNames.h
src/events/: SkillActivatedEvent.h
src/input/: InputManager.cpp  InputManager.h
src/items/: EquipableItem.cpp  EquipableItem.h  Item.cpp  Item.h
src/maps/: Map.cpp  Map.h
src/monsters/: Monster.cpp  Monster.h  MonsterManager.cpp  MonsterManager.h
src/reducers/: Reducer.h
src/rendering/: Drawable.h  Renderer.h  SortedRenderGroup.h  SortedRenderer.cpp  SortedRenderer.h
src/skills/: Projectile.cpp  Projectile.h  ProjectileSkill.cpp  ProjectileSkill.h  Skill.cpp  Skill.h
src/states/: CharacterState.h  ConfigState.h  GameState.h  MapState.h  MonsterState.h  ProjectileState.h  SkillState.h
src/updaters/: Updater.h
src/utils/: Event.h  Logger.h  Observable.h  Observer.h
src/windows/: Context.cpp  Context.h  ContextSwitcher.cpp  ContextSwitcher.h  MainMenu.cpp  MainMenu.h
(+214 files in other folders)
